[package]
name = "html-purifier"
version = "0.1.1"
description = "HTML Purifier"
authors = ["MehmetCan ŞAHİN <sahinmcan@gmail.com>"]
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/html-purifier"
repository = "https://github.com/mehmetcansahin/html-purifier"
keywords = ["html", "purifier"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_html = "0.1.0"