[package]
name = "html-purifier"
version = "0.3.0"
description = "HTML Purifier"
authors = ["MehmetCan ŞAHİN <sahinmcan@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/html-purifier"
repository = "https://github.com/mehmetcansahin/html-purifier"
keywords = ["html", "purifier"]
categories = ["web-programming"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lol_html = "1.2.0"
